--- a/package.json
+++ b/package.json
@@ -21,10 +21,16 @@
     "@nestjs/common": "^5.0.0",
     "@nestjs/core": "^5.0.0",
     "@nestjs/microservices": "^5.0.0",
+    "@nestjs/passport": "^1.0.11",
     "@nestjs/testing": "^5.0.0",
     "@nestjs/websockets": "^5.0.0",
+    "bcrypt": "^2.0.1",
     "fastify-formbody": "^2.0.0",
     "husky": "^0.14.3",
+    "jsonwebtoken": "^8.2.2",
+    "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-jwt": "^4.0.0",
     "pretty-quick": "^1.6.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.0.0",
