Added parceljs support
- now the client-side is built with parcel. This bundler is really
  powerful, and really simple to use. Now running `npm run start:dev` also
  runs parcel. No other commands are currently supported yet.

- the build npm script will need to be updated to work with parcel, as
  they both currently use the dist folder, will need to change the parcel
  dist folder to something else.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "format": "prettier --write \"**/*.ts\"",
     "start": "ts-node -r tsconfig-paths/register src/main.ts",
-    "start:dev": "nodemon",
+    "start:dev": "concurrently --kill-others \"nodemon\" \"npx parcel watch ./src/client/index.html\"",
     "prestart:prod": "rm -rf dist && tsc",
     "start:prod": "node dist/main.js",
     "start:hmr": "node dist/server",
@@ -41,8 +41,10 @@
     "@types/jest": "^21.1.8",
     "@types/node": "^9.3.0",
     "@types/supertest": "^2.0.4",
+    "concurrently": "^3.5.1",
     "jest": "^21.2.1",
     "nodemon": "^1.14.1",
+    "parcel-bundler": "^1.8.1",
     "prettier": "^1.13.5",
     "supertest": "^3.0.0",
     "ts-jest": "^21.2.4",
