--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "license": "MIT",
   "scripts": {
     "format": "prettier --write \"**/*.ts\"",
-    "start": "ts-node -r tsconfig-paths/register src/main.ts",
+    "start:local": "ts-node -r tsconfig-paths/register src/main.ts",
     "start:dev": "concurrently --kill-others \"nodemon\" \"npx parcel watch ./src/client/index.html\"",
-    "prestart:prod": "rm -rf dist && tsc",
-    "start:prod": "node dist/main.js",
+    "prestart": "rm -rf dist && tsc",
+    "start": "node dist/main.js",
     "start:hmr": "node dist/server",
     "test": "jest",
     "test:cov": "jest --coverage",
