--- a/package.json
+++ b/package.json
@@ -34,13 +34,15 @@
     "pretty-quick": "^1.6.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.0.0",
-    "typescript": "^2.6.2"
+    "typescript": "^2.6.2",
+    "winston": "^2.4.2"
   },
   "devDependencies": {
     "@types/express": "^4.0.39",
     "@types/jest": "^21.1.8",
     "@types/node": "^9.3.0",
     "@types/supertest": "^2.0.4",
+    "@types/winston": "^2.3.9",
     "concurrently": "^3.5.1",
     "jest": "^21.2.1",
     "nodemon": "^1.14.1",
