--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/supertest": "^2.0.4",
     "@types/winston": "^2.3.9",
     "concurrently": "^3.5.1",
+    "dotenv": "^6.0.0",
     "jest": "^21.2.1",
     "nodemon": "^1.14.1",
     "parcel-bundler": "^1.8.1",
