--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "format": "prettier --write \"**/*.ts\"",
     "start:local": "ts-node -r tsconfig-paths/register src/main.ts",
+    "start:front-end": "npx parcel ./src/client/index.html --no-hmr",
     "start:dev": "concurrently --kill-others \"nodemon\" \"npx parcel watch ./src/client/index.html\"",
     "prestart": "rm -rf dist && tsc",
     "start": "node dist/main.js",
@@ -31,6 +32,7 @@
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^4.0.0",
+    "phaser": "^3.10.1",
     "pretty-quick": "^1.6.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.0.0",
