--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "author": "brad taniguchi",
   "license": "MIT",
   "scripts": {
-    "format": "prettier --write \"**/*.ts\"",
-    "start:local": "ts-node -r tsconfig-paths/register src/main.ts",
-    "start:front-end": "npx parcel ./src/client/index.html --no-hmr",
+    "start:backend": "ts-node -r tsconfig-paths/register src/main.ts",
+    "start:frontend": "npx parcel ./src/client/index.html --no-hmr",
     "start:dev": "concurrently --kill-others \"nodemon\" \"npx parcel watch ./src/client/index.html\"",
     "prestart": "rm -rf dist && tsc",
     "start": "node dist/main.js",
@@ -15,6 +14,7 @@
     "test": "jest",
     "test:cov": "jest --coverage",
     "test:e2e": "jest --config ./test/jest-e2e.json",
+    "format": "prettier --write \"**/*.ts\"",
     "webpack": "webpack --config webpack.config.js",
     "precommit": "pretty-quick --staged"
   },
