--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/winston": "^2.3.9",
     "concurrently": "^3.5.1",
     "dotenv": "^6.0.0",
+    "eslint": "^5.1.0",
     "jest": "^21.2.1",
     "nodemon": "^1.14.1",
     "parcel-bundler": "^1.8.1",
